fixing dark mode color

--- a/site/public/css/colors.css
+++ b/site/public/css/colors.css
@@ -232,6 +232,7 @@
     --standard-pale-blue-gray: #2a2224;
     --btn-default-active: #6d6d6d;
     --btn-default-white: #515151;
+    --btn-default-hover: #595959;
     --standard-hover-light-gray: #2b2b2b;
     --standard-light-gray: #757575;
     --standard-medium-gray: #a3a3a3;
